can add/view favorite games
