# project/routes/users.js
@@ -3,16 +3,17 @@ var router = express.Router();
 const DButils = require("./utils/DButils");
 const users_utils = require("./utils/users_utils");
 const players_utils = require("./utils/players_utils");
+const games_utils = require("./utils/games_utils");
 
 /**
  * Authenticate all incoming requests by middleware
  */
 router.use(async function (req, res, next) {
-  if (req.session && req.session.user_id) {
-    DButils.execQuery("SELECT user_id FROM users_tirgul")
+  if (req.session && req.session.username) {
+    DButils.execQuery("SELECT Username FROM dbo.Users")
       .then((users) => {
-        if (users.find((x) => x.user_id === req.session.user_id)) {
-          req.user_id = req.session.user_id;
+        if (users.find((x) => x.Username === req.session.username)) {
+          req.username = req.session.username;
           next();
         }
       })
@@ -27,7 +28,7 @@ router.use(async function (req, res, next) {
  */
 router.post("/favoritePlayers", async (req, res, next) => {
   try {
-    const user_id = req.session.user_id;
+    const username = req.session.username;
     const player_id = req.body.playerId;
     await users_utils.markPlayerAsFavorite(user_id, player_id);
     res.status(201).send("The player successfully saved as favorite");
@@ -41,13 +42,49 @@ router.post("/favoritePlayers", async (req, res, next) => {
  */
 router.get("/favoritePlayers", async (req, res, next) => {
   try {
-    const user_id = req.session.user_id;
+    const username = req.session.username;
     let favorite_players = {};
     const player_ids = await users_utils.getFavoritePlayers(user_id);
     let player_ids_array = [];
     player_ids.map((element) => player_ids_array.push(element.player_id)); //extracting the players ids into array
     const results = await players_utils.getPlayersInfo(player_ids_array);
     res.status(200).send(results);
+  } catch (error) {
+    next(error);
+  }
+});
+
+router.get("/favoriteGames", async (req, res, next) => {
+  try {
+    const username = req.session.username;
+    console.log(username);
+    const game_ids = await users_utils.getFavoriteGames(username);
+    if (!game_ids || game_ids.length == 0) {
+      res.status(204).send('no favorite games');
+    }
+    else {
+      const results = await games_utils.getGamesInfoByIds(game_ids);
+      console.log('results')
+      console.log(results)
+      res.status(200).send(results);
+    }
+  } catch (error) {
+    next(error);
+  }
+});
+
+router.post("/favoriteGames", async (req, res, next) => {
+  try {
+    const game_id = req.body.gameId;
+    const isExist = await games_utils.checkFutureGameExists(game_id);
+    if (!isExist) {
+      res.status(400).send('bad game id');
+    }
+    else {
+      const username = req.session.username;
+      const game_ids = await users_utils.markGameAsFavorite(game_id, username);
+      res.status(201).send('game has been added to favorites!');
+    }
   } catch (error) {
     next(error);
   }
