# project/routes/utils/games_utils.js
@@ -7,14 +7,11 @@ async function getTeamsPastGames(teamId) {
             await DButils.execQuery(
             `SELECT * FROM dbo.PastGames WHERE HomeTeamId = '${teamId}' OR AwayTeamId = '${teamId}'`
             )
-        );
-        
+        );    
         const promises = games.map(async (game) => {
             return await extractRelevantPastGameData(game);
         });
-
         return Promise.all(promises);
-
         } catch (error) {
         throw new Error(error);
     }
@@ -38,37 +35,30 @@ async function getTeamsFutureGames(teamId) {
 }
 
 async function getEventsByGameId(gameId) {
-
     try {
         const events = (
             await DButils.execQuery(
                 `SELECT * FROM dbo.EventLog WHERE GameId = '${gameId}'`
             )
         );
-
     return events;
-
     } catch (error) {
         throw new Error(error);
     }
 }
 
 async function getNextGameInfo() {
-
     const gameInfo = await DButils.execQuery(
         `SELECT *
         FROM dbo.FutureGames AS t
         WHERE t.TimeStamp = (SELECT MIN(TimeStamp)
                      FROM dbo.FutureGames AS t2)`
     );
-
     return extractRelevantFutureGameData(gameInfo[0]);
 }
 
 async function extractRelevantPastGameData(game_info) {
-    
     const game_events = await getEventsByGameId(game_info.GameId);
-    
     return {
         gameId: game_info.GameId,
         date: game_info.GameDate,
@@ -79,6 +69,7 @@ async function extractRelevantPastGameData(game_info) {
         homeTeamScore: game_info.HomeTeamScore,
         awayTeamScore: game_info.AwayTeamScore,
         eventLog: game_events,
+        referee: game_info.Referee,
     };
 }
 
@@ -90,6 +81,7 @@ function extractRelevantFutureGameData(game_info) {
         homeTeamId: game_info.HomeTeamId,
         awayTeamId: game_info.AwayTeamId,
         stadium: game_info.Stadium,
+        referee: game_info.Referee,
     };
 }
 
@@ -97,13 +89,10 @@ async function getAllFutureGames() {
     const gamesFromDB = await DButils.execQuery(
         `SELECT * FROM dbo.FutureGames`
     );
-
     let extractedData = []
-
     gamesFromDB.map((game) => {
         extractedData.push(extractRelevantFutureGameData(game));
     });
-
     return extractedData;
 }
 
@@ -111,15 +100,30 @@ async function getAllPastGames() {
     const gamesFromDB = await DButils.execQuery(
         `SELECT * FROM dbo.PastGames`
     );
-
-    console.log('From BD:'); //DELETE THIS
-    console.log(gamesFromDB); //DELETE THIS
-
-    const promises = games.map(async (game) => {
+    const promises = gamesFromDB.map(async (game) => {
         return await extractRelevantPastGameData(game);
     });
-
     return Promise.all(promises);
+}
+
+async function getGamesInfoByIds(game_ids) {
+    const promises = game_ids.map(async (game_id) => {
+        return await DButils.execQuery(
+            `SELECT * FROM dbo.FutureGames WHERE GameId='${game_id}'`
+        );
+    });
+    return Promise.all(promises);
+}
+
+async function checkFutureGameExists(game_id) {
+    // this should check if the game exist..
+    const game = await DButils.execQuery(
+        `SELECT 1 FROM dbo.FutureGames WHERE GameId='${game_id}'`
+    );
+    if (!game || game.length == 0) {
+        return false;
+    }
+    return true;
 }
 
 exports.getNextGameInfo = getNextGameInfo;
@@ -129,3 +133,5 @@ exports.getTeamsPastGames = getTeamsPastGames;
 exports.getTeamsFutureGames = getTeamsFutureGames;
 exports.getAllFutureGames = getAllFutureGames;
 exports.getAllPastGames = getAllPastGames;
+exports.getGamesInfoByIds = getGamesInfoByIds;
+exports.checkFutureGameExists = checkFutureGameExists;
